<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="del">DEL</string>
    <string name="dot">.</string>
    <string name="plus">\u002B</string>
    <string name="minus">\u2212</string>
    <string name="times">\u00D7</string>
    <string name="div">\u00F7</string>
    <string name="substring1">%1$s%2$s</string>
</resources>
