<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.makos.calculator.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="4"
        android:rowCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_columnSpan="4"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textIsSelectable="true"
            android:inputType="none"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/zero"
            android:textAlignment="gravity"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_columnSpan="4"
            android:background="#c0c0c0" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_columnSpan="4"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textIsSelectable="true"
            android:inputType="none"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/zero"
            android:textAlignment="gravity"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/seven"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/eight"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/nine"
            android:textSize="40sp" />

        <Button
            android:id="@+id/badd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="signClicked"
            android:text="@string/plus"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/four"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/five"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/six"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bsub"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="signClicked"
            android:text="@string/minus"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/one"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/two"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/three"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bmul"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="signClicked"
            android:text="@string/times"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bdot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="dotClicked"
            android:text="@string/dot"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/zero"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bdel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="deleteClicked"
            android:text="@string/del"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bdiv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:onClick="signClicked"
            android:text="@string/div"
            android:textSize="40sp" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>
